--- a/with-redux.html
+++ b/with-redux.html
@@ -23,9 +23,13 @@
                 if(action.type === 'CHANGE_COLOR') {
                     newState = Object.assign({},state, {color: action.color});
                 }
+                console.log(action.type, action, state, newState);
                 return newState;
             }
-            var store = Redux.createStore(reducer);
+            var store = Redux.createStore(
+                reducer,window.__REDUX_DEVTOOLS_EXTENSION__ &&
+                window.__REDUX_DEVTOOLS_EXTENSION__()
+            );
             console.log(store.getState());
             function red() {
                 var state = store.getState();
