--- a/main.html
+++ b/main.html
@@ -24,7 +24,13 @@
                 while(i<state.contents.length){
                     liTags = liTags + `
                         <li>
-                            <a href="${state.contents[i].id}">${state.contents[i].title}</a>
+                            <a onclick="
+                                event.preventDefault();
+                                var action = {type:'SELECT', id:${state.contents[i].id}};
+                                store.dispatch(action);
+                            "href="${state.contents[i].id}">
+                                ${state.contents[i].title}
+                            </a>
                         </li>
                     `;
                     i ++;
@@ -53,15 +59,22 @@
             }
             
             function reducer(state,action) {
+                console.log(state,action);
                 if(state === undefined) {
                     return {
+                        selected_id:null,
                         contents:[
                             {id:1,title:'HTML',desc:'HTML is ...'},
                             {id:2,title:'CSS',desc:'CSS is ...'}
                         ]
                     }
                 }
-                return 
+                var newState = {};
+                if(action.type === 'SELECT') {
+                    newState = Object.assign({},state, {selected_id:action.id});
+                }
+                console.log(action, state, newState);
+                return newState;
             }
             var store = Redux.createStore(reducer);
             subject();
