Redux 7-5 : subscrive를 통한 자동갱신

--- a/main.html
+++ b/main.html
@@ -50,10 +50,21 @@
                 `;
             }
             function article() {
+                var state = store.getState();
+                var i= 0;
+                var aTitle, aDesc;
+                while(i<state.contents.length) {
+                    if(state.contents[i].id === state.selected_id){
+                        aTitle = state.contents[i].title;
+                        aDesc = state.contents[i].desc;
+                        break;
+                    }
+                    i++;
+                }
                 document.querySelector('#content').innerHTML = `
                 <article>
-                    <h2>HTML</h2>
-                    HTML is ...
+                    <h2>${aTitle}</h2>
+                    ${aDesc}
                 </article>
                 `;
             }
@@ -62,7 +73,7 @@
                 console.log(state,action);
                 if(state === undefined) {
                     return {
-                        selected_id:null,
+                        selected_id:1,
                         contents:[
                             {id:1,title:'HTML',desc:'HTML is ...'},
                             {id:2,title:'CSS',desc:'CSS is ...'}
@@ -77,6 +88,7 @@
                 return newState;
             }
             var store = Redux.createStore(reducer);
+            store.subscribe(article);
             subject();
             TOC();
             control();
