--- a/main.html
+++ b/main.html
@@ -46,9 +46,16 @@
                     <ul>
                         <li><a onclick ="
                                 event.preventDefault();
-
+                                store.dispatch({
+                                    type:'CHANGE_MODE',
+                                    mode:'create'
+                                })
                             "href="/create">create</a></li>
-                        <li><input type="button" value="delete">delete</a></li>
+                        <li><input onclick="
+                            store.dispatch({
+                                type:'DELETE'
+                            })
+                            " type="button" value="delete">delete</a></li>
                     </ul>
                 `;
             }
@@ -97,7 +104,14 @@
                         ${aDesc}
                     </article>
                     `;
-                    }
+                } else if(state.mode === 'welcome'){
+                    document.querySelector('#content').innerHTML = `
+                    <article>
+                        <h2>WELCOME</h2>
+                        Hellom Redux!!!
+                    </article>
+                    `;
+                }
             }
             
             function reducer(state,action) {
@@ -105,7 +119,7 @@
                 if(state === undefined) {
                     return {
                         max_id:2,
-                        mode:'create',
+                        mode:'welcome',
                         selected_id:1,
                         contents:[
                             {id:1,title:'HTML',desc:'HTML is ...'},
@@ -115,7 +129,7 @@
                 }
                 var newState = {};
                 if(action.type === 'SELECT') {
-                    newState = Object.assign({},state, {selected_id:action.id});
+                    newState = Object.assign({},state, {selected_id:action.id, mode:'read'});
                 } else if(action.type === 'CREATE') {
                     var newMaxId = state.max_id +1;
                     var newContents = state.contents.concat();
@@ -124,6 +138,23 @@
                         max_id:newMaxId,
                         contents:newContents,
                         mode:'read'
+                    })
+                }else if(action.type === 'DELETE') {
+                    var newContents = [];
+                    var i = 0;
+                    while(i < state.contents.length){
+                        if(state.selected_id !== state.contents[i].id) {
+                            newContents.push(state.contents[i])
+                        };
+                        i++;
+                    }
+                    newState = Object.assign({}, state, {
+                        contents:newContents,
+                        mode:'welcome'
+                    })
+                }else if(action.type === 'CHANGE_MODE') {
+                    newState = Object.assign({},state,{
+                        mode:action.mode
                     })
                 }
                 console.log(action, state, newState);
